corrected settigns.gradle.kts; corrected tests in modification.io; getFirst()